Add a few more lombok annotations to reduce LOC (#2461)